manifests/authentik/postinstall/overlays/lab/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-server-routing-dashboard
  namespace: authentik
spec:
  parentRefs:
  - name: clusteringress-frontdoor
    sectionName: https
    namespace: gatewayapi
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - authentik.lab.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: authentik-server
      port: 80
      weight: 1
      kind: Service
